--- a/etc/init.rc
+++ b/etc/init.rc
@@ -41,6 +41,8 @@ on fs
     write /sys/class/android_usb/android0/iProduct ${ro.product.model}
     write /sys/class/android_usb/android0/iSerial ${ro.serialno}
 
+    insmod /drmboot.ko
+
 on boot
     ifup lo
     hostname localhost
