--- a/etc/init.rc
+++ b/etc/init.rc
@@ -47,6 +47,9 @@ on boot
     ifup lo
     hostname localhost
     domainname localdomain
+    setprop UserVolumeLabel "RockChip"
+    setprop InternalSD_ROOT "/mnt/internal_sd"
+    setprop ExternalSD_ROOT "/mnt/external_sd"
 
     class_start default
 
@@ -98,9 +101,14 @@ service adbd /sbin/adbd --root_seclabel=u:r:su:s0 --device_banner=recovery
 on property:ro.debuggable=1
     write /sys/class/android_usb/android0/enable 1
     start adbd
+    start console
 
 # Restart adbd so it can run as root
 on property:service.adb.root=1
     write /sys/class/android_usb/android0/enable 0
     restart adbd
     write /sys/class/android_usb/android0/enable 1
+
+service console /sbin/sh
+    console
+    disabled
